# multiagent-critique

./: DECISIONS.md  README.md  app.py  pyproject.toml  requirements.txt
src/critiqueloop/: __init__.py  cli.py  config.py  hitl.py  loop.py  memory.py  models.py
src/critiqueloop/agents/: __init__.py  aggregator.py  base.py  critic.py  generator.py
src/critiqueloop/providers/: __init__.py  anthropic.py  base.py  heuristic.py  mock.py  openai.py
tests/: conftest.py  test_agents.py  test_aggregator.py  test_baseline.py  test_cli.py  test_config.py  test_loop.py  test_providers.py  test_routing_hitl.py
